# GoogleTest-Framework

./: CMakeCache.txt  CMakeLists.txt  README.md  build.sh
Docker/: Dockerfile  build_image.cmd  docker-compose.yml
Src/Stm32_Project_1/: .cproject  .project  Stm32_Project_1.ioc
Tests/: CMakeLists.txt  test.sh
Tests/Test_Project_1/: test_main.cpp
